[package]
name = "gcc_lgr_auth_service"
version = "0.1.1"
edition = "2021"

description = "Auth service lgr bootcamp learning project"
authors = ["Cintra, Guilherme"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
